# src/controllers/searchs.controllers.ts
@@ -23,3 +23,23 @@ export const searchController = async (req: Request, res: Response) => {
     page: Number(page)
   })
 }
+
+export const searchHashtagsController = async (req: Request, res: Response) => {
+  const { content, limit, page, media_type, people_follow } = req.query
+  const { decoded_authorization }: any = req
+  const userId = decoded_authorization?.userId
+  const { tweets, total } = await searchService.searchHashtagsTweet(
+    content as string,
+    Number(page),
+    Number(limit),
+    userId,
+    media_type as MediaTypeQuery,
+    people_follow as string
+  )
+  res.json({
+    message: 'search hashtags successfully',
+    tweets,
+    total_page: Math.ceil(total / Number(limit)),
+    page: Number(page)
+  })
+}
